--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>4 in a row</title>
     <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/mobileVersion.css">
 </head>
 <body>
 <div id="panel" class="panel">
