--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/mobileVersion.css">
 </head>
 <body>
-<div id="panel" class="panel">
+<div id="panel" class="panelTablero">
 </div>
 
 
